# llm-signature-framework

./: .gitignore  README.md
.github/workflows/: python-package.yml
llm-signature-framework-v0.2.2/: CHANGELOG.md  README.md  REPO_TREE.txt  pyproject.toml
llm-signature-framework-v0.2.2/canvas/: core_canvas_v0_2_2.py
llm-signature-framework-v0.2.2/prompts/: sample.json
llm-signature-framework-v0.2.2/scripts/: init_repo.sh  release_tag.sh
llm-signature-framework-v0.2.2/src/llm_signature_framework/: __init__.py  backends.py  cli.py  core.py  state.py  templates.py  tools.py
llm-signature-framework-v0.2.2/src/llm_signature_framework/examples/: demo.py
llm-signature-framework-v0.2.2/tests/: test_backends.py  test_cli.py  test_manifest.py  test_smoke.py  test_templates.py  test_tools_validation.py
